PR port-amd64/40091 compat_linux32 module loading = panic due to missing syms